--- a/frontend/src/pages/games/SequenceMemorization/SMWindow.css
+++ b/frontend/src/pages/games/SequenceMemorization/SMWindow.css
@@ -67,3 +67,23 @@ button {
   border-radius: 5px;
   cursor: pointer;
 }
+
+.dev-controls {
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px; 
+  align-items: center; 
+  gap: 10px;
+}
+
+.dev-controls button {
+  font-size: 1.2rem;
+  padding: 10px 20px;
+  cursor: pointer;
+
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.56);
+  background: #643392;
+  box-shadow: 0px 4px 24px -1px rgba(0, 0, 0, 0.20);
+  backdrop-filter: blur(20px);
+}
